--- a/.github/workflows/client-ci.yml
+++ b/.github/workflows/client-ci.yml
@@ -14,14 +14,14 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Dependencies
-        working-directory: frontend
+        working-directory: client
         run: npm install
 
       - name: Build Frontend
-        working-directory: frontend
+        working-directory: client
         run: npm run build
 
       - name: Run Frontend Tests
-        working-directory: frontend
+        working-directory: client
         run: npm test
 
