--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,35 @@
-name: Deploy to AWS EC2
+name: Docker Image CI
 
 on:
   push:
-    branches:
-      - master
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 jobs:
-  deploy:
+
+  build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan 16.171.133.100 >> ~/.ssh/known_hosts
-
-      - name: Deploy with Docker Compose
-        run: docker-compose up --build -d
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker build --file ./client/Dockerfile.dev --tag rasimthegrey/react-test ./client
+      
+  run-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Test the Image
+        run: docker run -e CI=true rasimthegrey/react-test npm test
+  create-prod:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build Client
+        run: docker build -t rasimthegrey/multi-client ./client
+      - name: Build NGINX
+        run: docker build -t rasimthegrey/multi-nginx ./nginx
+      - name: Build Server
+        run: docker build -t rasimthegrey/multi-server ./server
+      - name: Build Worker
+        run: docker build -t rasimthegrey/multi-worker ./worker
