--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,3 +26,14 @@ jobs:
       run: docker build -t rasimthegrey/multi-server ./server
     - name: Build Worker
       run: docker build -t rasimthegrey/multi-worker ./worker
+    - name: Log in to docker Hub
+      run: echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_ID" --password-stdin
+    - name: push images to docker hub
+      run: docker push rasimthegrey/multi-client
+    - name: push images to docker hub
+      run: docker push rasimthegrey/multi-nginx
+    - name: push images to docker hub
+      run: docker push rasimthegrey/multi-server
+    - name: push images to docker hub
+      run: docker push rasimthegrey/multi-worker
+      
