--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Build Worker
       run: docker build -t rasimthegrey/multi-worker ./worker
     - name: Log in to docker Hub
-      run: echo "$DOCKER_HUB_PASSWORD" | docker login --username $DOCKER_HUB_ID --password-stdin
+      run: echo "$DOCKER_HUB_PASSWORD" | docker login --username rasim99 --password-stdin
     - name: push images to docker hub
       run: docker push rasimthegrey/multi-client
     - name: push images to docker hub
