--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,25 +15,25 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build --file ./client/Dockerfile.dev --tag rasimthegrey/react-test ./client
+      run: docker build --file ./client/Dockerfile.dev --tag rasim99/react-test ./client
     - name: Test the Image
-      run: docker run -e CI=true rasimthegrey/react-test npm test
+      run: docker run -e CI=true rasim99/react-test npm test
     - name: Build Client
-      run: docker build -t rasimthegrey/multi-client ./client
+      run: docker build -t rasim99/multi-client ./client
     - name: Build NGINX
-      run: docker build -t rasimthegrey/multi-nginx ./nginx
+      run: docker build -t rasim99/multi-nginx ./nginx
     - name: Build Server
-      run: docker build -t rasimthegrey/multi-server ./server
+      run: docker build -t rasim99/multi-server ./server
     - name: Build Worker
-      run: docker build -t rasimthegrey/multi-worker ./worker
+      run: docker build -t rasim99/multi-worker ./worker
     - name: Log in to docker Hub
       run: docker login -u ${{ secrets.DOCKER_HUB_ID }} -p ${{ secrets.DOCKER_HUB_PASSWORD }}
     - name: push images to docker hub
-      run: docker push rasimthegrey/multi-client
+      run: docker push rasim99/multi-client
     - name: push images to docker hub
-      run: docker push rasimthegrey/multi-nginx
+      run: docker push rasim99/multi-nginx
     - name: push images to docker hub
-      run: docker push rasimthegrey/multi-server
+      run: docker push rasim99/multi-server
     - name: push images to docker hub
-      run: docker push rasimthegrey/multi-worker
+      run: docker push rasim99/multi-worker
       
