--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,23 +27,18 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: fibonacci-calculator
         run: |
-          cd client/
-          docker build multi-client ./client 
+          docker build -t multi-client ./client 
           docker tag multi-client:latest $ECR_REGISTRY/$ECR_REPOSITORY/multi-client:latest
-          cd ..
-          cd nginx/
-          docker build multi-nginx ./nginx 
-          docker tag multi-nginx:latest $ECR_REGISTRY/$ECR_REPOSITORY/multi-nginx:latest
-          cd ..
-          cd server/
-          docker build multi-server ./server 
-          docker tag multi-server:latest $ECR_REGISTRY/$ECR_REPOSITORY/multi-server:latest
-          cd ..
-          cd worker/
-          docker build multi-worker ./worker 
-          docker tag multi-worker:latest $ECR_REGISTRY/$ECR_REPOSITORY/multi-worker:latest
-          cd ..
           docker push $ECR_REGISTRY/$ECR_REPOSITORY/multi-client:latest
+
+          docker build -t multi-nginx ./nginx 
+          docker tag multi-nginx:latest $ECR_REGISTRY/$ECR_REPOSITORY/multi-nginx:latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY/multi-nginx:latest
+
+          docker build -t multi-server ./server 
+          docker tag multi-server:latest $ECR_REGISTRY/$ECR_REPOSITORY/multi-server:latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY/multi-server:latest
+
+          docker build -t multi-worker ./worker 
+          docker tag multi-worker:latest $ECR_REGISTRY/$ECR_REPOSITORY/multi-worker:latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY/multi-worker:latest
